Add img e primeiro artigo mudanca de css

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Matheus Mello de Lima</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <a class="navbar-brand" href="index.html">Matheus Mello de Lima</a>
     <button
         class="navbar-toggler"
         type="button"
@@ -46,6 +46,22 @@
         </div>
     </div>
 </nav>
+<div
+    id="carouselExampleSlidesOnly"
+    class="carousel slide"
+    data-ride="carousel"
+>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img
+                src="../assets/index.png"
+                class="d-block w-100"
+                alt="..."
+            />
+        </div>
+    </div>
+</div>
+<span class="d-block p-4 bg-primary text-white text-center"></span>
 <script>
     const url = window.location.href;
     let liId = '#about-link';
