--- a/templates/header.html
+++ b/templates/header.html
@@ -26,7 +26,7 @@
         </ul>
         <div class="my-2 my-lg-0">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a
                         class="nav-link"
                         href="https://www.linkedin.com/in/matheus-mello-de-lima-a50415111/"
@@ -34,7 +34,7 @@
                         >LinkedIn</a
                     >
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a
                         class="nav-link"
                         href="https://github.com/mellomaths"
