removendo aba de about adicionando texto no index e icones

--- a/templates/header.html
+++ b/templates/header.html
@@ -20,29 +20,28 @@
             <li class="nav-item" id="articles-link">
                 <a class="nav-link" href="articles.html">Artigos</a>
             </li>
-            <li class="nav-item" id="about-link">
-                <a class="nav-link" href="about.html">Sobre</a>
-            </li>
         </ul>
-        <div class="my-2 my-lg-0">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a
-                        class="nav-link"
-                        href="https://www.linkedin.com/in/matheus-mello-de-lima-a50415111/"
-                        target="_blank"
-                        >LinkedIn</a
-                    >
-                </li>
-                <li class="nav-item">
-                    <a
-                        class="nav-link"
-                        href="https://github.com/mellomaths"
-                        target="_blank"
-                        >GitHub</a
-                    >
-                </li>
-            </ul>
+        <div class="socials">
+            <div class="my-2 my-lg-0">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a
+                            class="nav-link"
+                            href="https://www.linkedin.com/in/matheus-mello-de-lima-a50415111/"
+                            target="_blank"
+                            ><i class="fab fa-linkedin-in"></i
+                        ></a>
+                    </li>
+                    <li class="nav-item">
+                        <a
+                            class="nav-link"
+                            href="https://github.com/mellomaths"
+                            target="_blank"
+                            ><i class="fab fa-github"></i
+                        ></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </nav>
