--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,9 @@
     background-color: #ecf0f1;
     background: #ecf0f1;
 }
+
+.hover-effect:hover {
+    -webkit-box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.75);
+    box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.75);
+}
